代码生成器之前修改